Inset the focus border to prevent cropping
The exception to this is the button, which would loose accessible contrast if the border was inset.

--- a/mu-plugins/blocks/global-header-footer/postcss/header/menu.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/header/menu.pcss
@@ -31,7 +31,7 @@
 		&:focus-visible {
 			outline: none;
 			border-radius: 2px;
-			box-shadow: 0 0 0 1.5px var(--wp-global-header--link-color--active);
+			box-shadow: inset 0 0 0 1.5px var(--wp-global-header--link-color--active);
 		}
 	}
 
@@ -39,7 +39,7 @@
 		&:focus-visible {
 			outline: none;
 			border-radius: 2px;
-			box-shadow: 0 0 0 1.5px var(--wp-global-header--link-color--active);
+			box-shadow: inset 0 0 0 1.5px var(--wp-global-header--link-color--active);
 		}
 	}
 
@@ -149,7 +149,7 @@
 			&:focus-visible {
 				outline: none;
 				border-radius: 2px;
-				box-shadow: 0 0 0 1.5px var(--wp-global-header--link-color--active);
+				box-shadow: inset 0 0 0 1.5px var(--wp-global-header--link-color--active);
 			}
 
 			@media (--tablet) {
