--- a/mu-plugins/blocks/global-header-footer/postcss/header/search.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/header/search.pcss
@@ -28,7 +28,7 @@
 		&:focus-visible {
 			outline: none;
 			border-radius: 2px;
-			box-shadow: 0 0 0 1.5px var(--wp-global-header--link-color--active);
+			box-shadow: inset 0 0 0 1.5px var(--wp-global-header--link-color--active);
 		}
 	}
 
